--- a/Week8/bit-show-react/package.json
+++ b/Week8/bit-show-react/package.json
@@ -6,7 +6,8 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "yarn": "^1.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
